// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
<form>
  <Radio
    disabled={false}
    name="radio"
    size="m"
  />
  <Label
    htmlFor="medium"
    size="m"
  >
    中
  </Label>
</form>
`;

exports[`Radio should render with props size and disabled 1`] = `
<form>
  <Radio
    disabled={true}
    name="radio"
    size="lg"
  />
  <Label
    htmlFor="large"
    size="m"
  >
    大
  </Label>
</form>
`;
